=============================================================================

2005-02-28  Frank Warmerdam  <warmerdam@pobox.com>

	* Prepare for 3.1.5 release.

2004-10-26  Frank Warmerdam  <warmerdam@pobox.com>

	* ogdi/drivers/vrf/utils.c: the path parsing regex was being freed,
	but then not recompiled if needed again later.  Was breaking some 
	efforts to open a second VRF datasource after the first was closed.

	* README: slight improvements in build explanation.

	* ogdi/contrib/ogdi_info/ogdi_info.c: minor improvements.

2004-10-25  Frank Warmerdam  <warmerdam@pobox.com>

	* ogdi/driver/vrf/vrfswq.c: fixed case of 1 character wide string

	fields as per bug 809737.

	* vpflib/vpfprim.c: Fixed bug in create_edge_rec() with getting
	the left face id if it is in 'I' format, instead of 'K' format such
	as occurs in the rference layer of VMAP0 products.

	* ogdi/driver/vrf/utils.c: Use short for "buffint" variable.  This is
	the level number used in forming metadata.  This corrects a complaint
	noticed in valgrind.  Likely to cause problems on big endian systems
	as well (crazy level numbers).

	* ogdi/driver/vrf/vrfswq.c: Fixed so that comparisons to string fields
	longer than one character work.  Fixed so that trailing spaces are
	trimmed off string values read from disk before applying comparisons. 

2004-10-19  Frank Warmerdam  <warmerdam@pobox.com>

	* ogdi/drivers/vrf/object.c: Fixed memory leak for line layers with
	an attribute query in effect (primList) as reported by Jerome Waymel.

2004-10-05  Frank Warmerdam  <warmerdam@pobox.com>

	* ogdi/drivers/vrf/vrfswq.c: fixed memory leak.

	* README: updated to reflect use of configure. 

=============================================================================

2004-10-04  Frank Warmerdam  <warmerdam@pobox.com>

	* Release OGDI 3.1.3.

2004-03-29  Frank Warmerdam  <warmerdam@pobox.com>

	* ogdi/drivers/rpf/utils.c: Check for FSDEVG field is present in 
	TOC file.  As per Bug 917678.
